--- a/main.html
+++ b/main.html
@@ -520,7 +520,7 @@ try@{
                     </div>
                     <div class="form-group">
                         <lable for="user-id">User ID</lable>
-                        <input type="text" class="form-control" id="user-id" placeholder="Guest@23001aK&5r9W-2h1f" aria-describedby="idHelp" readonly/>
+                        <input type="text" class="form-control" id="user-id" placeholder="Guest@2401cA22f22K&5r08HW08h03f" aria-describedby="idHelp" readonly/>
                         <small id="idHelp" class="form-text text-muted">This is not your user name or pin or visible in public. This id will be use to identify your activities and register your download records.</small>
                     </div>
                     <div class="form-group">
@@ -594,6 +594,7 @@ try@{
 <script src="./Database/HelpPage.js"></script>
 <script src="./Database/OpenApiPage.js"></script>
 <script src="./Database/LinkBox.js"></script>
+<script src="./Components/auth.min.js"></script>
 <script src="./Components/default.js"></script>
 <script src="./Components/compiler.js"></script>
 <script src="./Components/hex.js"></script>
