--- a/main.html
+++ b/main.html
@@ -5,6 +5,8 @@
     <meta name="theme-color" content="#ffffff">
     <meta name="description" content="Welcome to inphantApi, a powerful and free API system provided by kidKrishkode for public use, Our API system is completely free and designed to be accessible to everyone, with no need for any monetary transactions.">
     <meta name="author" contant="Krishnendu Mitra">
+    <meta name="keywords" content="kidKrishkode, inphantApi, inphant api, github, api, krishnendu mitra, rest api, free, bookmylib, elephant api, Inphant" lang="en-us">
+    <meta name="og:image" property="og:image" content="./fav-icon/logo-l-c-o.png">
     <title version="1.0">Inphant Api</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -490,6 +492,24 @@ try@{
                     to leverage its capabilities to enhance functionality and user experience. For additional guidance and support, refer to the 
                     comprehensive documentation provided alongside the API plugin code snippets. Should you encounter any challenges or require 
                     further assistance, our support team is readily available to provide guidance and support throughout the integration process.
+                    </p>
+                </div>
+            </li>
+            <li class="drops">
+                <div class="docs-content">
+                    <h2>How to add API here</h2>
+                    <p>To add your API to the Inphant Api platform, simply navigate to our official website and visit the API page. Here, you'll 
+                    find a prominent "plus" button that allows you to initiate the API addition process. This button is conveniently accessible 
+                    on every API page as well. Upon clicking this button, users will be guided through the process of adding their API.<br>
+                    However, it's important to adhere to certain guidelines and formatting requirements when submitting an API. As part of our 
+                    commitment to simplicity and ease of use, our platform is designed with frontend developers in mind, ensuring a straightforward 
+                    integration process. Detailed rules and instructions are provided on the add API page, ensuring that users can easily follow 
+                    the necessary steps to incorporate their API into our platform.<br>    
+                    Additionally, we offer video tutorials that walk users through the API addition process, providing visual guidance and further 
+                    assistance. These tutorials serve as valuable resources for users looking to seamlessly integrate their APIs with our platform.
+                    In short, adding your API to the Inphant Api platform is a straightforward process that involves following a set of guidelines 
+                    and utilizing the provided resources for assistance. Our platform aims to make API integration accessible and hassle-free for 
+                    developers, empowering them to share their APIs with our community of users.    
                     </p>
                 </div>
             </li>
