--- a/index.html
+++ b/index.html
@@ -2,32 +2,211 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inphant Api</title>
-    <link rel="icon" href="./fav-icon/logo-o-c.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#ffffff">
+    <meta name="description" content="Welcome to inphantApi, a powerful and free API system provided by kidKrishkode for public use, Our API system is completely free and designed to be accessible to everyone, with no need for any monetary transactions.">
+    <meta name="author" contant="Krishnendu Mitra">
+    <meta name="keywords" content="kidKrishkode, inphantApi, inphant api, github, api, krishnendu mitra, rest api, free, bookmylib, elephant api, Inphant" lang="en-us">
+    <meta name="og:image" property="og:image" content="./fav-icon/logo-l-c-o.png">
+    <title version="1.0">Inphant Api</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="icon" href="./fav-icon/icon-o-c.png">
+    <link rel="stylesheet" href="./Components/origin.css">
 </head>
 <style>
 body{
     padding: 0;
     margin: 0;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-h1{
+body h2{
+    text-align: center;
+    margin-top: 40px;
+    color: blueviolet;
+    font-family: Arial, Helvetica, sans-serif;
+}
+body section{
+    background: #000;
+    width: 50%;
+    margin: 2px 25%;
+    border-radius: 10px;
+    overflow: hidden;
+}
+#progress{
+    margin: 0px 0px 10px 0px;
+    width: 30%;
+    height: 3px;
+    background: blue;
+    position: relative;
+    animation: scanne 0.5s linear infinite;
+}
+@keyframes scanne{
+    0%{
+        left: 2px;
+        border-top-left-radius: 10px;
+    }50%{
+        left: 40%;
+        border-top-left-radius: 0px;
+        border-top-right-radius: 0px;
+    }100%{
+        left: 90%;
+        border-top-right-radius: 10px;
+    }
+}
+#task{
+    margin: 0px 0px;
+    padding: 10px 6px;
+    width: 100%;
+}
+.btnHolder{
+    width: 40%;
+    margin: 10px 30%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.btnHolder .btn{
+    color: #fff;
+    font-size: 20px;
+    cursor: pointer;
+    outline: none;
+}
+.component{
+    width: 100%;
+    margin: 0px;
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.left_component{
+    width: 90%;
+    margin: 0px;
+    display: flex;
+    flex-direction: column;
+}
+.top_component{
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 0px;
+    margin-left: 5px;
+    color: #fff;
+}
+.bottom_component{
+    font-size: 16px;
+    margin-top: 0px;
+    margin-left: 5px;
+    font-family: sans-serif;
+    color: grey;
+}
+.right_component{
+    width: 10%;
+    margin: 0px;
+    font-size: 22px;
+    padding-top: 8px;
     color: #0c8ff0;
     text-align: center;
-    font-family: sans-serif;
+}
+.right_component .red{
+    color: red;
+}
+.right_component .green{
+    color: greenyellow;
+}
+@media only screen and (max-width: 900px){
+    body h2{
+        margin-top: 20px;
+    }
+    body section{
+        width: 90%;
+        margin: 2px 5%;
+    }
+    .top_component{
+        font-size: 18px;
+    }
+    .bottom_component{
+        font-size: 12px;
+    }
+    .right_component,.btnHolder .btn{
+        font-size: 16px;
+    }
+    .btnHolder{
+        width: 90%;
+        margin: 10px 5%;
+    }
 }
 </style>
 <body onload="user();">
-    <h1 onclick="mainPage();">API Console</h1>
+    <h2>Verify Systems</h2>
+    <section>
+        <div id="progress"></div>
+        <div id="task">
+            <div class="component">
+                <div class="left_component">
+                    <div class="top_component">Browser</div>
+                    <div class="bottom_component" id="d1">loading..</div>
+                </div>
+                <div class="right_component" id="v1">&#x2b55;</div>
+            </div>
+            <div class="component">
+                <div class="left_component">
+                    <div class="top_component">Version</div>
+                    <div class="bottom_component" id="d2">loading..</div>
+                </div>
+                <div class="right_component" id="v2">&#x2b55;</div>
+            </div>
+            <div class="component">
+                <div class="left_component">
+                    <div class="top_component">Screen Ratio</div>
+                    <div class="bottom_component" id="d3">loading..</div>
+                </div>
+                <div class="right_component" id="v3">&#x2b55;</div>
+            </div>
+            <div class="component">
+                <div class="left_component">
+                    <div class="top_component">Internet</div>
+                    <div class="bottom_component" id="d4">loading..</div>
+                </div>
+                <div class="right_component" id="v4">&#x2b55;</div>
+            </div>
+            <div class="component">
+                <div class="left_component">
+                    <div class="top_component">Agent Name</div>
+                    <div class="bottom_component" id="d5">loading..</div>
+                </div>
+                <div class="right_component" id="v5">&#x2b55;</div>
+            </div>
+            <div class="component">
+                <div class="left_component">
+                    <div class="top_component">Location</div>
+                    <div class="bottom_component" id="d6">loading..</div>
+                </div>
+                <div class="right_component" id="v6">&#x2b55;</div>
+            </div>
+            <div class="component">
+                <div class="left_component">
+                    <div class="top_component">User Id</div>
+                    <div class="bottom_component" id="d7">loading..</div>
+                </div>
+                <div class="right_component" id="v7">&#x2b55;</div>
+            </div>
+        </div>
+    </section>
+    <div class="btnHolder">
+        <button class="btn">Cancel</button>
+        <button class="btn btn-primary"onclick="mainPage();">Next</button>
+    </div>
 </body>
 <script>
 function user(){
-    linkChecker(0);
+    verify();
 }
 function mainPage(){
     window.location = './main.html';
 }
 </script>
+<script src="./Database/asset.js"></script>
 <script src="./Components/security.min.js"></script>
 <script src="./Components/auth.min.js"></script>
 
