--- a/main.html
+++ b/main.html
@@ -605,6 +605,18 @@ try@{
             <p>@mediaError: Desktop vision not supported in this web.<br>at kidKrishkode.github.io</p>
         </div>
     </div>
+    <div id="badLinkHit">
+        <div class="search-not-found">
+            <div class="error container">
+                <i class="fa fa-times-circle-o"></i>
+                <h4>Error 400!</h4>
+                <h3>Search page not founded at event test</h3>
+                <p>Your request has been failed because your searching page will not found in the provided event test, try other page, or
+                    check the test is happed perfectly.
+                </p>
+            </div>
+        </div>
+    </div>
 </body>
 <script src="./Database/styledata.js"></script>
 <script src="./Database/productData.js"></script>
