--- a/index.html
+++ b/index.html
@@ -20,20 +20,24 @@ body{
     margin: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-body h2{
+#verifiWindow{
+    width: 100%;
+    display: none;
+}
+#verifiWindow h2{
     text-align: center;
     margin-top: 40px;
     color: blueviolet;
     font-family: Arial, Helvetica, sans-serif;
 }
-body section{
+body #verifiWindow .security{
     background: #000;
     width: 50%;
     margin: 2px 25%;
     border-radius: 10px;
     overflow: hidden;
 }
-#progress{
+#verifiWindow .security #progress{
     margin: 0px 0px 10px 0px;
     width: 30%;
     height: 3px;
@@ -54,7 +58,7 @@ body section{
         border-top-right-radius: 10px;
     }
 }
-#task{
+#verifiWindow .security #task{
     margin: 0px 0px;
     padding: 10px 6px;
     width: 100%;
@@ -72,7 +76,7 @@ body section{
     cursor: pointer;
     outline: none;
 }
-.component{
+#verifiWindow .security .component{
     width: 100%;
     margin: 0px;
     margin-bottom: 10px;
@@ -80,27 +84,27 @@ body section{
     flex-direction: row;
     justify-content: space-between;
 }
-.left_component{
+#verifiWindow .security .component .left_component{
     width: 90%;
     margin: 0px;
     display: flex;
     flex-direction: column;
 }
-.top_component{
+#verifiWindow .security .component .left_component .top_component{
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 0px;
     margin-left: 5px;
     color: #fff;
 }
-.bottom_component{
+#verifiWindow .security .component .left_component .bottom_component{
     font-size: 16px;
     margin-top: 0px;
     margin-left: 5px;
     font-family: sans-serif;
     color: grey;
 }
-.right_component{
+#verifiWindow .security .component .right_component{
     width: 10%;
     margin: 0px;
     font-size: 22px;
@@ -108,27 +112,27 @@ body section{
     color: #0c8ff0;
     text-align: center;
 }
-.right_component .red{
+#verifiWindow .security .component .right_component .red{
     color: red;
 }
-.right_component .green{
+#verifiWindow .security .component .right_component .green{
     color: greenyellow;
 }
 @media only screen and (max-width: 900px){
     body h2{
         margin-top: 20px;
     }
-    body section{
+    body #verifiWindow .security{
         width: 90%;
         margin: 2px 5%;
     }
-    .top_component{
+    #verifiWindow .security .component .left_component .top_component{
         font-size: 18px;
     }
-    .bottom_component{
+    #verifiWindow .security .component .left_component .bottom_component{
         font-size: 12px;
     }
-    .right_component,.btnHolder .btn{
+    #verifiWindow .security .component .right_component,.btnHolder .btn{
         font-size: 16px;
     }
     .btnHolder{
@@ -138,65 +142,7 @@ body section{
 }
 </style>
 <body onload="user();">
-    <h2>Verify Systems</h2>
-    <section>
-        <div id="progress"></div>
-        <div id="task">
-            <div class="component">
-                <div class="left_component">
-                    <div class="top_component">Browser</div>
-                    <div class="bottom_component" id="d1">loading..</div>
-                </div>
-                <div class="right_component" id="v1">&#x2b55;</div>
-            </div>
-            <div class="component">
-                <div class="left_component">
-                    <div class="top_component">Version</div>
-                    <div class="bottom_component" id="d2">loading..</div>
-                </div>
-                <div class="right_component" id="v2">&#x2b55;</div>
-            </div>
-            <div class="component">
-                <div class="left_component">
-                    <div class="top_component">Screen Ratio</div>
-                    <div class="bottom_component" id="d3">loading..</div>
-                </div>
-                <div class="right_component" id="v3">&#x2b55;</div>
-            </div>
-            <div class="component">
-                <div class="left_component">
-                    <div class="top_component">Internet</div>
-                    <div class="bottom_component" id="d4">loading..</div>
-                </div>
-                <div class="right_component" id="v4">&#x2b55;</div>
-            </div>
-            <div class="component">
-                <div class="left_component">
-                    <div class="top_component">Agent Name</div>
-                    <div class="bottom_component" id="d5">loading..</div>
-                </div>
-                <div class="right_component" id="v5">&#x2b55;</div>
-            </div>
-            <div class="component">
-                <div class="left_component">
-                    <div class="top_component">Location</div>
-                    <div class="bottom_component" id="d6">loading..</div>
-                </div>
-                <div class="right_component" id="v6">&#x2b55;</div>
-            </div>
-            <div class="component">
-                <div class="left_component">
-                    <div class="top_component">User Id</div>
-                    <div class="bottom_component" id="d7">loading..</div>
-                </div>
-                <div class="right_component" id="v7">&#x2b55;</div>
-            </div>
-        </div>
-    </section>
-    <div class="btnHolder">
-        <button class="btn">Cancel</button>
-        <button class="btn btn-primary"onclick="mainPage();">Next</button>
-    </div>
+    <section id="verifiWindow"></section>
 </body>
 <script>
 function user(){
@@ -207,6 +153,7 @@ function mainPage(){
 }
 </script>
 <script src="./Database/asset.js"></script>
+<script src="./Database/VerifiPage.js"></script>
 <script src="./Components/security.min.js"></script>
 <script src="./Components/auth.min.js"></script>
 
