--- a/main.html
+++ b/main.html
@@ -528,32 +528,7 @@ try@{
     <section id="AboutPage"></section>
     <section id="HelpPage"></section>
     <section id="OpenApiPage"></section>
-    <section id="AccountPage">
-        <div class="accountBox">
-            <div class="icon"><i class="fa fa-user-circle-o"></i></div>
-            <div class="info">
-                <form class="container">
-                    <div class="form-group">
-                        <lable for="user-name">User Name</lable>
-                        <input type="name" class="form-control" id="user-name" placeholder="Guest" aria-describedby="nameHelp" readonly/>
-                        <small id="nameHelp" class="form-text text-muted">This is your user name which is visible in this IP only.</small>
-                    </div>
-                    <div class="form-group">
-                        <lable for="user-id">User ID</lable>
-                        <input type="text" class="form-control" id="user-id" placeholder="Guest@2401cA22f22K&5r08HW08h03f" aria-describedby="idHelp" readonly/>
-                        <small id="idHelp" class="form-text text-muted">This is not your user name or pin or visible in public. This id will be use to identify your activities and register your download records.</small>
-                    </div>
-                    <div class="form-group">
-                        <lable for="user-loc">User Location</lable>
-                        <input type="text" class="form-control" id="user-loc" placeholder="22°36',88°21'" aria-describedby="locHelp" readonly/>
-                        <small id="locHelp" class="form-text text-muted">This is your current coordinates , this is not visible in public.</small>
-                    </div>
-                </form>
-            </div>
-            <div class="flo"><div class="btn btn-danger">Reset</div><div class="btn btn-success">Download</div></div>
-            <div class="notice">Read Privacy Statements</div>
-        </div>
-    </section>
+    <section id="AccountPage"></section>
     <section id="blbg"></section>
     <footer>
         <div class="footer">
@@ -626,6 +601,7 @@ try@{
 <script src="./Database/HelpPage.js"></script>
 <script src="./Database/OpenApiPage.js"></script>
 <script src="./Database/LinkBox.js"></script>
+<script src="./Database/AccountPage.js"></script>
 <script src="./Components/auth.min.js"></script>
 <script src="./Components/default.js"></script>
 <script src="./Components/compiler.js"></script>
