--- a/main.html
+++ b/main.html
@@ -531,38 +531,7 @@ try@{
     <section id="blbg"></section>
     <section id="globalSearch">
         <div id="closeSearch" onclick="gloSearchOff();">&times;</div>
-        <div id="userSearch">
-            <ul>
-                <li class="user">
-                    <div class="user-left"><span>K</span></div>
-                    <div class="user-right">
-                        <div class="user-right-upper">kidKrishkode</div>
-                        <div class="user-right-lower">Owner | 21/02/24</div>
-                    </div>
-                </li>
-                <li class="user">
-                    <div class="user-left"><span>j</span></div>
-                    <div class="user-right">
-                        <div class="user-right-upper">Java</div>
-                        <div class="user-right-lower">Owner | 27/04/18</div>
-                    </div>
-                </li>
-                <li class="user">
-                    <div class="user-left"><span>P</span></div>
-                    <div class="user-right">
-                        <div class="user-right-upper">Python</div>
-                        <div class="user-right-lower">Owner | 27/04/18</div>
-                    </div>
-                </li>
-                <li class="user">
-                    <div class="user-left"><span>C</span></div>
-                    <div class="user-right">
-                        <div class="user-right-upper">Cpp</div>
-                        <div class="user-right-lower">Owner | 27/04/18</div>
-                    </div>
-                </li>
-            </ul>
-        </div>
+        <div id="userSearch">&times; No internet!</div>
         <div class="searchField" id="apiSearch"></div>
         <div class="searchField" id="pageSearch"></div>
         <div id="missSearch"><img src="./img/404.svg" alt="404"/></div>
