--- a/main.html
+++ b/main.html
@@ -529,13 +529,7 @@ try@{
     <section id="OpenApiPage"></section>
     <section id="AccountPage"></section>
     <section id="blbg"></section>
-    <section id="globalSearch">
-        <div id="closeSearch" onclick="gloSearchOff();">&times;</div>
-        <div id="userSearch">&times; No internet!</div>
-        <div class="searchField" id="apiSearch"></div>
-        <div class="searchField" id="pageSearch"></div>
-        <div id="missSearch"><img src="./img/404.svg" alt="404"/></div>
-    </section>
+    <section id="globalSearch"></section>
     <footer>
         <div class="footer">
             <h2>INPHANT API</h2>
@@ -607,6 +601,7 @@ try@{
 <script src="./Database/OpenApiPage.js"></script>
 <script src="./Database/LinkBox.js"></script>
 <script src="./Database/AccountPage.js"></script>
+<script src="./Database/GlobalSearch.js"></script>
 <script src="./Components/auth.min.js"></script>
 <script src="./Components/default.js"></script>
 <script src="./Components/compiler.js"></script>
