--- a/main.html
+++ b/main.html
@@ -301,18 +301,18 @@ console@|.log(s|response|n); //it it console true if text to voice convertation 
                             <div class="line-numbers" id="libInReactHtml-line"></div>
                             <pre class="code language-html" contenteditable="false" spellcheck="false" id="libInReactHtml">
 < html@ |lang="en"n >
-  < head@ >
-    < meta@ |charset="utf-8"n />
-    < link@ |rel="icon"n |href="%PUBLIC_URL%/favicon.ico"n />
-    < meta@ |name="viewport"n |content="width=device-width, initial-scale=1"n />
-    < link@ |rel="apple-touch-icon"n |href="%PUBLIC_URL%/logo192.png"n />
-    < link@ |rel="manifest"n |href="%PUBLIC_URL%/manifest.json"n />
-    < title@ >React App< /title@ >
-  < /head@ >
-  < body@ >
-    < noscript@ >You need to enable JavaScript to run this app.< /noscript@ >
-    < div@ |id="root"n >< /div@ >
-  < /body@ >
+    < head@ >
+        < meta@ |charset="utf-8"n />
+        < link@ |rel="icon"n |href="%PUBLIC_URL%/favicon.ico"n />
+        < meta@ |name="viewport"n |content="width=device-width, initial-scale=1"n />
+        < link@ |rel="apple-touch-icon"n |href="%PUBLIC_URL%/logo192.png"n />
+        < link@ |rel="manifest"n |href="%PUBLIC_URL%/manifest.json"n />
+        < title@ >React App< /title@ >
+    < /head@ >
+    < body@ >
+        < noscript@ >You need to enable JavaScript to run this app.< /noscript@ >
+        < div@ |id="root"n >< /div@ >
+    < /body@ >
   < !-- Add this script tag in your project (below) -- >
 &lt; script@ |src="https://kidKrishkode.github.io/inphantApi.github.io/APIs/inphantSTDlib.min.js"n >< /script@ >
 < /html@ >
@@ -332,19 +332,19 @@ console@|.log(s|response|n); //it it console true if text to voice convertation 
                             <div class="line-numbers" id="plugExaInReactHtml-line"></div>
                             <pre class="code language-html" contenteditable="false" spellcheck="false" id="plugExaInReactHtml">
 < html@ |lang="en"n >
-  < head@ >
-    < meta@ |charset="utf-8"n />
-    < link@ |rel="icon"n |href="%PUBLIC_URL%/favicon.ico"n />
-    < meta@ |name="viewport"n |content="width=device-width, initial-scale=1"n />
-    < link@ |rel="apple-touch-icon"n |href="%PUBLIC_URL%/logo192.png"n />
-    < link@ |rel="manifest"n |href="%PUBLIC_URL%/manifest.json"n />
-    < title@ >React App< /title@ >
-  < /head@ >
-  < body@ >
-    < noscript@ >You need to enable JavaScript to run this app.< /noscript@ >
-    < div@ |id="root"n >< /div@ >
-  < /body@ >
-  < !-- Add this script tag in your project (below) -- >
+    < head@ >
+        < meta@ |charset="utf-8"n />
+        < link@ |rel="icon"n |href="%PUBLIC_URL%/favicon.ico"n />
+        < meta@ |name="viewport"n |content="width=device-width, initial-scale=1"n />
+        < link@ |rel="apple-touch-icon"n |href="%PUBLIC_URL%/logo192.png"n />
+        < link@ |rel="manifest"n |href="%PUBLIC_URL%/manifest.json"n />
+        < title@ >React App< /title@ >
+    < /head@ >
+    < body@ >
+        < noscript@ >You need to enable JavaScript to run this app.< /noscript@ >
+        < div@ |id="root"n >< /div@ >
+    < /body@ >
+< !-- Add this script tag in your project (below) -- >
 &lt; script@ |src="https://kidKrishkode.github.io/inphantApi.github.io/APIs/inphantSTDlib.min.js"n >< /script@ >
 < !-- Add require api link in your project (below) -- >
 &lt; script@ |src="https://kidKrishkode.github.io/inphantApi.github.io/APIs/erudaApi.js"n >< /script@ >
@@ -427,22 +427,18 @@ try@{
                         <div class="code-wrapper">
                             <div class="line-numbers" id="libExaAngHtml-line"></div>
                             <pre class="code language-html" contenteditable="false" spellcheck="false" id="libExaAngHtml">
-< html@ |lang="en"n >
-  < head@ >
-    < meta@ |charset="utf-8"n />
-    < link@ |rel="icon"n |href="%PUBLIC_URL%/favicon.ico"n />
-    < meta@ |name="viewport"n |content="width=device-width, initial-scale=1"n />
-    < link@ |rel="apple-touch-icon"n |href="%PUBLIC_URL%/logo192.png"n />
-    < link@ |rel="manifest"n |href="%PUBLIC_URL%/manifest.json"n />
-    < title@ >Angular App< /title@ >
-  < /head@ >
-  < body@ >
-
-  < /body@ >
-  < !-- Add this script tag in your project (below) -- >
+< html@ ng-app >
+    < head@ >
+        &lt; script@ |src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"n >< /script@ >
+        < title@ >Angular App< /title@ >
+    < /head@ >
+    < body@ >
+        < div@ >
+            < h1@ >Ahoy hoy Universe< /h1@ >
+        < /div@ >
+    < /body@ >
+< !-- Add this script tag in your project (below) -- >
 &lt; script@ |src="https://kidKrishkode.github.io/inphantApi.github.io/APIs/inphantSTDlib.min.js"n >< /script@ >
-< !-- Add require api link in your project (below) -- >
-&lt; script@ |src="https://kidKrishkode.github.io/inphantApi.github.io/APIs/erudaApi.js"n >< /script@ >
 < /html@ >
                             </pre>
                         </div>
@@ -450,9 +446,33 @@ try@{
                     <p>Similarly, incorporate the API link into the index.html file using the script src tag, ensuring accessibility throughout your 
                     Angular application:
                     </p>
-                    <code>
-                        ```html &lt;!-- Include the API link in index.html --> &lt;script src="api-link.js">&lt;/script> ``` 
-                    </code>
+                    <div class="code-editor">
+                        <ul class="tabs codeheader_html">
+                            <li class="tab" title="File name with extension">./src/index.html</li>
+                            <li class="tabi"><span onclick="Copy('plugExaAngHtml');" title="Copy this code">&#128203;</span><span onclick="Rview('plugExaAngHtml')" title="Raw view of this code" class="word">Raw</span>
+                            <span title="Feedback of this code"onclick="codeFeed();">&#x1F44D;</span><span onclick="downloadCode('plugExaAngHtml','index.html');" title="Download it in text file">&#x1F4E5;</span></li>
+                        </ul>
+                        <div class="code-wrapper">
+                            <div class="line-numbers" id="plugExaAngHtml-line"></div>
+                            <pre class="code language-html" contenteditable="false" spellcheck="false" id="plugExaAngHtml">
+< html@ ng-app >
+    < head@ >
+        &lt; script@ |src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"n >< /script@ >
+        < title@ >Angular App< /title@ >
+    < /head@ >
+    < body@ >
+        < div@ >
+            < h1@ >Ahoy hoy Universe< /h1@ >
+        < /div@ >
+    < /body@ >
+< !-- Add this script tag in your project (below) -- >
+&lt; script@ |src="https://kidKrishkode.github.io/inphantApi.github.io/APIs/inphantSTDlib.min.js"n >< /script@ >
+< !-- Add require api link in your project (below) -- >
+&lt; script@ |src="https://kidKrishkode.github.io/inphantApi.github.io/APIs/erudaApi.js"n >< /script@ >
+< /html@ >
+                            </pre>
+                        </div>
+                    </div>
                     <p>With the library plugin and API link successfully added to your Angular application, proceed to utilize the APIs within your 
                     main.ts or app.js file, which may vary in location from project to project. Utilize the predefined agents to send requests to 
                     the API, as demonstrated in the code snippet below:
