--- a/main.html
+++ b/main.html
@@ -600,6 +600,7 @@ try@{
             <p>@mediaError: Desktop vision not supported in this web.<br>at kidKrishkode.github.io</p>
         </div>
     </div>
+    <div class="modal fade" id="errorModel" tabindex="-1" role="dialog" aria-labelledby="errorModelLabel" aria-hidden="true"></div>
     <div id="badLinkHit">
         <div class="search-not-found">
             <div class="error container">
@@ -610,7 +611,7 @@ try@{
                 </p>
             </div>
         </div>
-    </div>
+    </div>      
 </body>
 <script src="./Database/styledata.js"></script>
 <script src="./Database/productData.js"></script>
@@ -620,6 +621,7 @@ try@{
 <script src="./Database/HelpPage.js"></script>
 <script src="./Database/OpenApiPage.js"></script>
 <script src="./Database/LinkBox.js"></script>
+<script src="./Database/ErrorModel.js"></script>
 <script src="./Database/AccountPage.js"></script>
 <script src="./Database/GlobalSearch.js"></script>
 <script src="./Components/auth.min.js"></script>
