--- a/main.html
+++ b/main.html
@@ -550,6 +550,9 @@ try@{
     <section id="AccountPage"></section>
     <section id="blbg"></section>
     <section id="globalSearch"></section>
+    <section id="portfolioPage">
+        
+    </section>
     <footer>
         <div class="footer">
             <h2>INPHANT API</h2>
@@ -624,6 +627,7 @@ try@{
 <script src="./Database/ErrorModel.js"></script>
 <script src="./Database/AccountPage.js"></script>
 <script src="./Database/GlobalSearch.js"></script>
+<script src="./Database/PortfolioPage.js"></script>
 <script src="./Components/auth.min.js"></script>
 <script src="./Components/default.js"></script>
 <script src="./Components/compiler.js"></script>
