--- a/main.html
+++ b/main.html
@@ -551,7 +551,28 @@ try@{
     <section id="blbg"></section>
     <section id="globalSearch"></section>
     <section id="portfolioPage">
-        
+        <div class="flx">
+            <div class="user-dp"><span class="btn">L</span></div>
+            <div class="user-info">
+                <div class="flw">
+                    <div class="user-name">loading...</div>
+                    <div class="user-package"><i class="fa fa-star"></i></div>
+                </div>
+                <div class="flo">
+                    <span class="user-profession">loading...</span>
+                    <span class="user-join">loading...</span>
+                    <span class="user-post">loading...</span>
+                </div>
+            </div>
+        </div>
+        <div class="btn-group" id="port-contacts">
+            <div class="btn btn-primary"><i class="fa fa-envelope"></i> Contact</div>
+            <div class="btn btn-secondary"><i class="fa fa-ban"></i> Report</div>
+        </div>
+        <hr>
+        <ul class="portfolio-product-list">
+
+        </ul>    
     </section>
     <footer>
         <div class="footer">
